# T5

./: CHANGELOG.md  LICENSE  README.md  T5.cabal
app/: P1.hs  P2.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
