cabal-version:      3.0
name:               T5
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             valfranciscangeli
maintainer:         vvfranciscangeli@gmail.com
category:           Homework
build-type:         Simple
extra-doc-files:    README.md

common warnings
    ghc-options: -Wall

-- ejecutable para p1.hs
executable p1-exe
    import:           warnings
    main-is:          P1.hs
    build-depends:    base ^>=4.17.2.1
                    , hspec >= 2.11.9
                    , QuickCheck >=2.15.0.1
                    , template-haskell >=2.19.0.0
                    , parallel >=3.2.2.0
                    , split >=0.2.3.5
                    , array >=0.5 && <0.6
    hs-source-dirs:   app
    ghc-options: -O2 -rtsopts -threaded

-- ejecutable para p2.hs
executable p2-exe
    import:           warnings
    main-is:          P2.hs
    build-depends:    base ^>=4.17.2.1
                    , hspec >= 2.11.9
                    , QuickCheck >=2.15.0.1
                    , template-haskell >=2.19.0.0
                    , parallel >=3.2.2.0
                    , split >=0.2.3.5
                    , array >=0.5 && <0.6
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options: -O2 -rtsopts -threaded
